rhdlc/test/compile-fail/scope/use-private-struct/top.rhdl
mod a {
    struct b {}
}

use a::b;
